Fix broken header format on smaller screens

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -240,7 +240,7 @@ body {
   }
 }
 
-@media screen and (min-width: 1024px) {
+@media screen and (min-width: 1040px) {
   .navbar-burger {
     display: none;
   }
